--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 *.class
 
 # Log file
-*.log
+*/logs.txt
 
 # BlueJ files
 *.ctxt
@@ -22,6 +22,3 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
-
-# ignore the config folder
-conf/
